E3/parser.output
Terminals unused in grammar

    TK_TIPO
    TK_ER


Grammar

    0 $accept: programa $end

    1 programa: lista ';'
    2         | ε

    3 lista: elemento
    4      | elemento ',' lista

    5 elemento: declaracao_variavel
    6         | declaracao_funcao

    7 declaracao_variavel: TK_VAR TK_ID TK_ATRIB tipo_num

    8 declaracao_funcao: cabecalho_funcao bloco_de_comandos

    9 cabecalho_funcao: TK_ID TK_SETA tipo_num lista_parametros_opcional TK_ATRIB

   10 lista_parametros_opcional: lista_parametros
   11                          | ε

   12 lista_parametros: TK_COM parametros
   13                 | parametros

   14 parametros: parametro
   15           | parametro ',' parametros

   16 parametro: TK_ID TK_ATRIB tipo_num

   17 bloco_de_comandos: '{' '}'
   18                  | '{' sequencia_comandos '}'

   19 sequencia_comandos: comando
   20                   | comando sequencia_comandos

   21 comando: matched_statement
   22        | unmatched_statement

   23 matched_statement: TK_SE '(' expressao ')' matched_statement TK_SENAO matched_statement
   24                  | outro_comando

   25 unmatched_statement: TK_SE '(' expressao ')' comando
   26                    | TK_SE '(' expressao ')' matched_statement TK_SENAO unmatched_statement

   27 outro_comando: bloco_de_comandos
   28              | declaracao_variavel_comando
   29              | atribuicao ';'
   30              | chamada_funcao ';'
   31              | retorno
   32              | repeticao

   33 declaracao_variavel_comando: declaracao_variavel ';'
   34                            | declaracao_variavel TK_COM literal ';'

   35 literal: TK_LI_INTEIRO
   36        | TK_LI_DECIMAL

   37 atribuicao: TK_ID TK_ATRIB expressao

   38 chamada_funcao: TK_ID '(' argumentos_opcional ')'

   39 argumentos_opcional: argumentos
   40                    | ε

   41 argumentos: expressao
   42           | expressao ',' argumentos

   43 retorno: TK_RETORNA expressao TK_ATRIB tipo_num ';'

   44 repeticao: TK_ENQUANTO '(' expressao ')' bloco_de_comandos

   45 tipo_num: TK_DECIMAL
   46         | TK_INTEIRO

   47 expressao: expr_logica_ou

   48 expr_logica_ou: expr_logica_ou '|' expr_logica_e
   49               | expr_logica_e

   50 expr_logica_e: expr_logica_e '&' expr_igualdade
   51              | expr_igualdade

   52 expr_igualdade: expr_igualdade TK_OC_EQ expr_relacional
   53               | expr_igualdade TK_OC_NE expr_relacional
   54               | expr_relacional

   55 expr_relacional: expr_relacional '<' expr_aditiva
   56                | expr_relacional '>' expr_aditiva
   57                | expr_relacional TK_OC_LE expr_aditiva
   58                | expr_relacional TK_OC_GE expr_aditiva
   59                | expr_aditiva

   60 expr_aditiva: expr_aditiva '+' expr_multiplicativa
   61             | expr_aditiva '-' expr_multiplicativa
   62             | expr_multiplicativa

   63 expr_multiplicativa: expr_multiplicativa '*' expr_unaria
   64                    | expr_multiplicativa '/' expr_unaria
   65                    | expr_multiplicativa '%' expr_unaria
   66                    | expr_unaria

   67 expr_unaria: '+' fator
   68            | '-' fator
   69            | '!' fator
   70            | fator

   71 fator: TK_ID
   72      | literal
   73      | chamada_funcao
   74      | '(' expressao ')'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 69
    '%' (37) 65
    '&' (38) 50
    '(' (40) 23 25 26 38 44 74
    ')' (41) 23 25 26 38 44 74
    '*' (42) 63
    '+' (43) 60 67
    ',' (44) 4 15 42
    '-' (45) 61 68
    '/' (47) 64
    ';' (59) 1 29 30 33 34 43
    '<' (60) 55
    '>' (62) 56
    '{' (123) 17 18
    '|' (124) 48
    '}' (125) 17 18
    error (256)
    TK_TIPO (258)
    TK_VAR (259) 7
    TK_SENAO (260) 23 26
    TK_DECIMAL (261) 45
    TK_SE (262) 23 25 26
    TK_INTEIRO (263) 46
    TK_ATRIB (264) 7 9 16 37 43
    TK_RETORNA (265) 43
    TK_SETA (266) 9
    TK_ENQUANTO (267) 44
    TK_COM (268) 12 34
    TK_OC_LE (269) 57
    TK_OC_GE (270) 58
    TK_OC_EQ (271) 52
    TK_OC_NE (272) 53
    TK_ID <valor_lexico> (273) 7 9 16 37 38 71
    TK_LI_INTEIRO <valor_lexico> (274) 35
    TK_LI_DECIMAL <valor_lexico> (275) 36
    TK_ER (276)


Nonterminals, with rules where they appear

    $accept (38)
        on left: 0
    programa <nodo_arvore> (39)
        on left: 1 2
        on right: 0
    lista <nodo_arvore> (40)
        on left: 3 4
        on right: 1 4
    elemento <nodo_arvore> (41)
        on left: 5 6
        on right: 3 4
    declaracao_variavel <valor_lexico> (42)
        on left: 7
        on right: 5 33 34
    declaracao_funcao <nodo_arvore> (43)
        on left: 8
        on right: 6
    cabecalho_funcao <nodo_arvore> (44)
        on left: 9
        on right: 8
    lista_parametros_opcional (45)
        on left: 10 11
        on right: 9
    lista_parametros (46)
        on left: 12 13
        on right: 10
    parametros (47)
        on left: 14 15
        on right: 12 13 15
    parametro (48)
        on left: 16
        on right: 14 15
    bloco_de_comandos <nodo_arvore> (49)
        on left: 17 18
        on right: 8 27 44
    sequencia_comandos <nodo_arvore> (50)
        on left: 19 20
        on right: 18 20
    comando <nodo_arvore> (51)
        on left: 21 22
        on right: 19 20 25
    matched_statement <nodo_arvore> (52)
        on left: 23 24
        on right: 21 23 26
    unmatched_statement <nodo_arvore> (53)
        on left: 25 26
        on right: 22 26
    outro_comando <nodo_arvore> (54)
        on left: 27 28 29 30 31 32
        on right: 24
    declaracao_variavel_comando <nodo_arvore> (55)
        on left: 33 34
        on right: 28
    literal <nodo_arvore> (56)
        on left: 35 36
        on right: 34 72
    atribuicao <nodo_arvore> (57)
        on left: 37
        on right: 29
    chamada_funcao <nodo_arvore> (58)
        on left: 38
        on right: 30 73
    argumentos_opcional <nodo_arvore> (59)
        on left: 39 40
        on right: 38
    argumentos <nodo_arvore> (60)
        on left: 41 42
        on right: 39 42
    retorno <nodo_arvore> (61)
        on left: 43
        on right: 31
    repeticao <nodo_arvore> (62)
        on left: 44
        on right: 32
    tipo_num (63)
        on left: 45 46
        on right: 7 9 16 43
    expressao <nodo_arvore> (64)
        on left: 47
        on right: 23 25 26 37 41 42 43 44 74
    expr_logica_ou <nodo_arvore> (65)
        on left: 48 49
        on right: 47 48
    expr_logica_e <nodo_arvore> (66)
        on left: 50 51
        on right: 48 49 50
    expr_igualdade <nodo_arvore> (67)
        on left: 52 53 54
        on right: 50 51 52 53
    expr_relacional <nodo_arvore> (68)
        on left: 55 56 57 58 59
        on right: 52 53 54 55 56 57 58
    expr_aditiva <nodo_arvore> (69)
        on left: 60 61 62
        on right: 55 56 57 58 59 60 61
    expr_multiplicativa <nodo_arvore> (70)
        on left: 63 64 65 66
        on right: 60 61 62 63 64 65
    expr_unaria <nodo_arvore> (71)
        on left: 67 68 69 70
        on right: 63 64 65 66
    fator <nodo_arvore> (72)
        on left: 71 72 73 74
        on right: 67 68 69 70


State 0

    0 $accept: • programa $end

    TK_VAR  shift, and go to state 1
    TK_ID   shift, and go to state 2

    $default  reduce using rule 2 (programa)

    programa             go to state 3
    lista                go to state 4
    elemento             go to state 5
    declaracao_variavel  go to state 6
    declaracao_funcao    go to state 7
    cabecalho_funcao     go to state 8


State 1

    7 declaracao_variavel: TK_VAR • TK_ID TK_ATRIB tipo_num

    TK_ID  shift, and go to state 9


State 2

    9 cabecalho_funcao: TK_ID • TK_SETA tipo_num lista_parametros_opcional TK_ATRIB

    TK_SETA  shift, and go to state 10


State 3

    0 $accept: programa • $end

    $end  shift, and go to state 11


State 4

    1 programa: lista • ';'

    ';'  shift, and go to state 12


State 5

    3 lista: elemento •
    4      | elemento • ',' lista

    ','  shift, and go to state 13

    $default  reduce using rule 3 (lista)


State 6

    5 elemento: declaracao_variavel •

    $default  reduce using rule 5 (elemento)


State 7

    6 elemento: declaracao_funcao •

    $default  reduce using rule 6 (elemento)


State 8

    8 declaracao_funcao: cabecalho_funcao • bloco_de_comandos

    '{'  shift, and go to state 14

    bloco_de_comandos  go to state 15


State 9

    7 declaracao_variavel: TK_VAR TK_ID • TK_ATRIB tipo_num

    TK_ATRIB  shift, and go to state 16


State 10

    9 cabecalho_funcao: TK_ID TK_SETA • tipo_num lista_parametros_opcional TK_ATRIB

    TK_DECIMAL  shift, and go to state 17
    TK_INTEIRO  shift, and go to state 18

    tipo_num  go to state 19


State 11

    0 $accept: programa $end •

    $default  accept


State 12

    1 programa: lista ';' •

    $default  reduce using rule 1 (programa)


State 13

    4 lista: elemento ',' • lista

    TK_VAR  shift, and go to state 1
    TK_ID   shift, and go to state 2

    lista                go to state 20
    elemento             go to state 5
    declaracao_variavel  go to state 6
    declaracao_funcao    go to state 7
    cabecalho_funcao     go to state 8


State 14

   17 bloco_de_comandos: '{' • '}'
   18                  | '{' • sequencia_comandos '}'

    TK_VAR       shift, and go to state 1
    TK_SE        shift, and go to state 21
    TK_RETORNA   shift, and go to state 22
    TK_ENQUANTO  shift, and go to state 23
    TK_ID        shift, and go to state 24
    '{'          shift, and go to state 14
    '}'          shift, and go to state 25

    declaracao_variavel          go to state 26
    bloco_de_comandos            go to state 27
    sequencia_comandos           go to state 28
    comando                      go to state 29
    matched_statement            go to state 30
    unmatched_statement          go to state 31
    outro_comando                go to state 32
    declaracao_variavel_comando  go to state 33
    atribuicao                   go to state 34
    chamada_funcao               go to state 35
    retorno                      go to state 36
    repeticao                    go to state 37


State 15

    8 declaracao_funcao: cabecalho_funcao bloco_de_comandos •

    $default  reduce using rule 8 (declaracao_funcao)


State 16

    7 declaracao_variavel: TK_VAR TK_ID TK_ATRIB • tipo_num

    TK_DECIMAL  shift, and go to state 17
    TK_INTEIRO  shift, and go to state 18

    tipo_num  go to state 38


State 17

   45 tipo_num: TK_DECIMAL •

    $default  reduce using rule 45 (tipo_num)


State 18

   46 tipo_num: TK_INTEIRO •

    $default  reduce using rule 46 (tipo_num)


State 19

    9 cabecalho_funcao: TK_ID TK_SETA tipo_num • lista_parametros_opcional TK_ATRIB

    TK_COM  shift, and go to state 39
    TK_ID   shift, and go to state 40

    $default  reduce using rule 11 (lista_parametros_opcional)

    lista_parametros_opcional  go to state 41
    lista_parametros           go to state 42
    parametros                 go to state 43
    parametro                  go to state 44


State 20

    4 lista: elemento ',' lista •

    $default  reduce using rule 4 (lista)


State 21

   23 matched_statement: TK_SE • '(' expressao ')' matched_statement TK_SENAO matched_statement
   25 unmatched_statement: TK_SE • '(' expressao ')' comando
   26                    | TK_SE • '(' expressao ')' matched_statement TK_SENAO unmatched_statement

    '('  shift, and go to state 45


State 22

   43 retorno: TK_RETORNA • expressao TK_ATRIB tipo_num ';'

    TK_ID          shift, and go to state 46
    TK_LI_INTEIRO  shift, and go to state 47
    TK_LI_DECIMAL  shift, and go to state 48
    '('            shift, and go to state 49
    '+'            shift, and go to state 50
    '-'            shift, and go to state 51
    '!'            shift, and go to state 52

    literal              go to state 53
    chamada_funcao       go to state 54
    expressao            go to state 55
    expr_logica_ou       go to state 56
    expr_logica_e        go to state 57
    expr_igualdade       go to state 58
    expr_relacional      go to state 59
    expr_aditiva         go to state 60
    expr_multiplicativa  go to state 61
    expr_unaria          go to state 62
    fator                go to state 63


State 23

   44 repeticao: TK_ENQUANTO • '(' expressao ')' bloco_de_comandos

    '('  shift, and go to state 64


State 24

   37 atribuicao: TK_ID • TK_ATRIB expressao
   38 chamada_funcao: TK_ID • '(' argumentos_opcional ')'

    TK_ATRIB  shift, and go to state 65
    '('       shift, and go to state 66


State 25

   17 bloco_de_comandos: '{' '}' •

    $default  reduce using rule 17 (bloco_de_comandos)


State 26

   33 declaracao_variavel_comando: declaracao_variavel • ';'
   34                            | declaracao_variavel • TK_COM literal ';'

    TK_COM  shift, and go to state 67
    ';'     shift, and go to state 68


State 27

   27 outro_comando: bloco_de_comandos •

    $default  reduce using rule 27 (outro_comando)


State 28

   18 bloco_de_comandos: '{' sequencia_comandos • '}'

    '}'  shift, and go to state 69


State 29

   19 sequencia_comandos: comando •
   20                   | comando • sequencia_comandos

    TK_VAR       shift, and go to state 1
    TK_SE        shift, and go to state 21
    TK_RETORNA   shift, and go to state 22
    TK_ENQUANTO  shift, and go to state 23
    TK_ID        shift, and go to state 24
    '{'          shift, and go to state 14

    $default  reduce using rule 19 (sequencia_comandos)

    declaracao_variavel          go to state 26
    bloco_de_comandos            go to state 27
    sequencia_comandos           go to state 70
    comando                      go to state 29
    matched_statement            go to state 30
    unmatched_statement          go to state 31
    outro_comando                go to state 32
    declaracao_variavel_comando  go to state 33
    atribuicao                   go to state 34
    chamada_funcao               go to state 35
    retorno                      go to state 36
    repeticao                    go to state 37


State 30

   21 comando: matched_statement •

    $default  reduce using rule 21 (comando)


State 31

   22 comando: unmatched_statement •

    $default  reduce using rule 22 (comando)


State 32

   24 matched_statement: outro_comando •

    $default  reduce using rule 24 (matched_statement)


State 33

   28 outro_comando: declaracao_variavel_comando •

    $default  reduce using rule 28 (outro_comando)


State 34

   29 outro_comando: atribuicao • ';'

    ';'  shift, and go to state 71


State 35

   30 outro_comando: chamada_funcao • ';'

    ';'  shift, and go to state 72


State 36

   31 outro_comando: retorno •

    $default  reduce using rule 31 (outro_comando)


State 37

   32 outro_comando: repeticao •

    $default  reduce using rule 32 (outro_comando)


State 38

    7 declaracao_variavel: TK_VAR TK_ID TK_ATRIB tipo_num •

    $default  reduce using rule 7 (declaracao_variavel)


State 39

   12 lista_parametros: TK_COM • parametros

    TK_ID  shift, and go to state 40

    parametros  go to state 73
    parametro   go to state 44


State 40

   16 parametro: TK_ID • TK_ATRIB tipo_num

    TK_ATRIB  shift, and go to state 74


State 41

    9 cabecalho_funcao: TK_ID TK_SETA tipo_num lista_parametros_opcional • TK_ATRIB

    TK_ATRIB  shift, and go to state 75


State 42

   10 lista_parametros_opcional: lista_parametros •

    $default  reduce using rule 10 (lista_parametros_opcional)


State 43

   13 lista_parametros: parametros •

    $default  reduce using rule 13 (lista_parametros)


State 44

   14 parametros: parametro •
   15           | parametro • ',' parametros

    ','  shift, and go to state 76

    $default  reduce using rule 14 (parametros)


State 45

   23 matched_statement: TK_SE '(' • expressao ')' matched_statement TK_SENAO matched_statement
   25 unmatched_statement: TK_SE '(' • expressao ')' comando
   26                    | TK_SE '(' • expressao ')' matched_statement TK_SENAO unmatched_statement

    TK_ID          shift, and go to state 46
    TK_LI_INTEIRO  shift, and go to state 47
    TK_LI_DECIMAL  shift, and go to state 48
    '('            shift, and go to state 49
    '+'            shift, and go to state 50
    '-'            shift, and go to state 51
    '!'            shift, and go to state 52

    literal              go to state 53
    chamada_funcao       go to state 54
    expressao            go to state 77
    expr_logica_ou       go to state 56
    expr_logica_e        go to state 57
    expr_igualdade       go to state 58
    expr_relacional      go to state 59
    expr_aditiva         go to state 60
    expr_multiplicativa  go to state 61
    expr_unaria          go to state 62
    fator                go to state 63


State 46

   38 chamada_funcao: TK_ID • '(' argumentos_opcional ')'
   71 fator: TK_ID •

    '('  shift, and go to state 66

    $default  reduce using rule 71 (fator)


State 47

   35 literal: TK_LI_INTEIRO •

    $default  reduce using rule 35 (literal)


State 48

   36 literal: TK_LI_DECIMAL •

    $default  reduce using rule 36 (literal)


State 49

   74 fator: '(' • expressao ')'

    TK_ID          shift, and go to state 46
    TK_LI_INTEIRO  shift, and go to state 47
    TK_LI_DECIMAL  shift, and go to state 48
    '('            shift, and go to state 49
    '+'            shift, and go to state 50
    '-'            shift, and go to state 51
    '!'            shift, and go to state 52

    literal              go to state 53
    chamada_funcao       go to state 54
    expressao            go to state 78
    expr_logica_ou       go to state 56
    expr_logica_e        go to state 57
    expr_igualdade       go to state 58
    expr_relacional      go to state 59
    expr_aditiva         go to state 60
    expr_multiplicativa  go to state 61
    expr_unaria          go to state 62
    fator                go to state 63


State 50

   67 expr_unaria: '+' • fator

    TK_ID          shift, and go to state 46
    TK_LI_INTEIRO  shift, and go to state 47
    TK_LI_DECIMAL  shift, and go to state 48
    '('            shift, and go to state 49

    literal         go to state 53
    chamada_funcao  go to state 54
    fator           go to state 79


State 51

   68 expr_unaria: '-' • fator

    TK_ID          shift, and go to state 46
    TK_LI_INTEIRO  shift, and go to state 47
    TK_LI_DECIMAL  shift, and go to state 48
    '('            shift, and go to state 49

    literal         go to state 53
    chamada_funcao  go to state 54
    fator           go to state 80


State 52

   69 expr_unaria: '!' • fator

    TK_ID          shift, and go to state 46
    TK_LI_INTEIRO  shift, and go to state 47
    TK_LI_DECIMAL  shift, and go to state 48
    '('            shift, and go to state 49

    literal         go to state 53
    chamada_funcao  go to state 54
    fator           go to state 81


State 53

   72 fator: literal •

    $default  reduce using rule 72 (fator)


State 54

   73 fator: chamada_funcao •

    $default  reduce using rule 73 (fator)


State 55

   43 retorno: TK_RETORNA expressao • TK_ATRIB tipo_num ';'

    TK_ATRIB  shift, and go to state 82


State 56

   47 expressao: expr_logica_ou •
   48 expr_logica_ou: expr_logica_ou • '|' expr_logica_e

    '|'  shift, and go to state 83

    $default  reduce using rule 47 (expressao)


State 57

   49 expr_logica_ou: expr_logica_e •
   50 expr_logica_e: expr_logica_e • '&' expr_igualdade

    '&'  shift, and go to state 84

    $default  reduce using rule 49 (expr_logica_ou)


State 58

   51 expr_logica_e: expr_igualdade •
   52 expr_igualdade: expr_igualdade • TK_OC_EQ expr_relacional
   53               | expr_igualdade • TK_OC_NE expr_relacional

    TK_OC_EQ  shift, and go to state 85
    TK_OC_NE  shift, and go to state 86

    $default  reduce using rule 51 (expr_logica_e)


State 59

   54 expr_igualdade: expr_relacional •
   55 expr_relacional: expr_relacional • '<' expr_aditiva
   56                | expr_relacional • '>' expr_aditiva
   57                | expr_relacional • TK_OC_LE expr_aditiva
   58                | expr_relacional • TK_OC_GE expr_aditiva

    TK_OC_LE  shift, and go to state 87
    TK_OC_GE  shift, and go to state 88
    '<'       shift, and go to state 89
    '>'       shift, and go to state 90

    $default  reduce using rule 54 (expr_igualdade)


State 60

   59 expr_relacional: expr_aditiva •
   60 expr_aditiva: expr_aditiva • '+' expr_multiplicativa
   61             | expr_aditiva • '-' expr_multiplicativa

    '+'  shift, and go to state 91
    '-'  shift, and go to state 92

    $default  reduce using rule 59 (expr_relacional)


State 61

   62 expr_aditiva: expr_multiplicativa •
   63 expr_multiplicativa: expr_multiplicativa • '*' expr_unaria
   64                    | expr_multiplicativa • '/' expr_unaria
   65                    | expr_multiplicativa • '%' expr_unaria

    '*'  shift, and go to state 93
    '/'  shift, and go to state 94
    '%'  shift, and go to state 95

    $default  reduce using rule 62 (expr_aditiva)


State 62

   66 expr_multiplicativa: expr_unaria •

    $default  reduce using rule 66 (expr_multiplicativa)


State 63

   70 expr_unaria: fator •

    $default  reduce using rule 70 (expr_unaria)


State 64

   44 repeticao: TK_ENQUANTO '(' • expressao ')' bloco_de_comandos

    TK_ID          shift, and go to state 46
    TK_LI_INTEIRO  shift, and go to state 47
    TK_LI_DECIMAL  shift, and go to state 48
    '('            shift, and go to state 49
    '+'            shift, and go to state 50
    '-'            shift, and go to state 51
    '!'            shift, and go to state 52

    literal              go to state 53
    chamada_funcao       go to state 54
    expressao            go to state 96
    expr_logica_ou       go to state 56
    expr_logica_e        go to state 57
    expr_igualdade       go to state 58
    expr_relacional      go to state 59
    expr_aditiva         go to state 60
    expr_multiplicativa  go to state 61
    expr_unaria          go to state 62
    fator                go to state 63


State 65

   37 atribuicao: TK_ID TK_ATRIB • expressao

    TK_ID          shift, and go to state 46
    TK_LI_INTEIRO  shift, and go to state 47
    TK_LI_DECIMAL  shift, and go to state 48
    '('            shift, and go to state 49
    '+'            shift, and go to state 50
    '-'            shift, and go to state 51
    '!'            shift, and go to state 52

    literal              go to state 53
    chamada_funcao       go to state 54
    expressao            go to state 97
    expr_logica_ou       go to state 56
    expr_logica_e        go to state 57
    expr_igualdade       go to state 58
    expr_relacional      go to state 59
    expr_aditiva         go to state 60
    expr_multiplicativa  go to state 61
    expr_unaria          go to state 62
    fator                go to state 63


State 66

   38 chamada_funcao: TK_ID '(' • argumentos_opcional ')'

    TK_ID          shift, and go to state 46
    TK_LI_INTEIRO  shift, and go to state 47
    TK_LI_DECIMAL  shift, and go to state 48
    '('            shift, and go to state 49
    '+'            shift, and go to state 50
    '-'            shift, and go to state 51
    '!'            shift, and go to state 52

    $default  reduce using rule 40 (argumentos_opcional)

    literal              go to state 53
    chamada_funcao       go to state 54
    argumentos_opcional  go to state 98
    argumentos           go to state 99
    expressao            go to state 100
    expr_logica_ou       go to state 56
    expr_logica_e        go to state 57
    expr_igualdade       go to state 58
    expr_relacional      go to state 59
    expr_aditiva         go to state 60
    expr_multiplicativa  go to state 61
    expr_unaria          go to state 62
    fator                go to state 63


State 67

   34 declaracao_variavel_comando: declaracao_variavel TK_COM • literal ';'

    TK_LI_INTEIRO  shift, and go to state 47
    TK_LI_DECIMAL  shift, and go to state 48

    literal  go to state 101


State 68

   33 declaracao_variavel_comando: declaracao_variavel ';' •

    $default  reduce using rule 33 (declaracao_variavel_comando)


State 69

   18 bloco_de_comandos: '{' sequencia_comandos '}' •

    $default  reduce using rule 18 (bloco_de_comandos)


State 70

   20 sequencia_comandos: comando sequencia_comandos •

    $default  reduce using rule 20 (sequencia_comandos)


State 71

   29 outro_comando: atribuicao ';' •

    $default  reduce using rule 29 (outro_comando)


State 72

   30 outro_comando: chamada_funcao ';' •

    $default  reduce using rule 30 (outro_comando)


State 73

   12 lista_parametros: TK_COM parametros •

    $default  reduce using rule 12 (lista_parametros)


State 74

   16 parametro: TK_ID TK_ATRIB • tipo_num

    TK_DECIMAL  shift, and go to state 17
    TK_INTEIRO  shift, and go to state 18

    tipo_num  go to state 102


State 75

    9 cabecalho_funcao: TK_ID TK_SETA tipo_num lista_parametros_opcional TK_ATRIB •

    $default  reduce using rule 9 (cabecalho_funcao)


State 76

   15 parametros: parametro ',' • parametros

    TK_ID  shift, and go to state 40

    parametros  go to state 103
    parametro   go to state 44


State 77

   23 matched_statement: TK_SE '(' expressao • ')' matched_statement TK_SENAO matched_statement
   25 unmatched_statement: TK_SE '(' expressao • ')' comando
   26                    | TK_SE '(' expressao • ')' matched_statement TK_SENAO unmatched_statement

    ')'  shift, and go to state 104


State 78

   74 fator: '(' expressao • ')'

    ')'  shift, and go to state 105


State 79

   67 expr_unaria: '+' fator •

    $default  reduce using rule 67 (expr_unaria)


State 80

   68 expr_unaria: '-' fator •

    $default  reduce using rule 68 (expr_unaria)


State 81

   69 expr_unaria: '!' fator •

    $default  reduce using rule 69 (expr_unaria)


State 82

   43 retorno: TK_RETORNA expressao TK_ATRIB • tipo_num ';'

    TK_DECIMAL  shift, and go to state 17
    TK_INTEIRO  shift, and go to state 18

    tipo_num  go to state 106


State 83

   48 expr_logica_ou: expr_logica_ou '|' • expr_logica_e

    TK_ID          shift, and go to state 46
    TK_LI_INTEIRO  shift, and go to state 47
    TK_LI_DECIMAL  shift, and go to state 48
    '('            shift, and go to state 49
    '+'            shift, and go to state 50
    '-'            shift, and go to state 51
    '!'            shift, and go to state 52

    literal              go to state 53
    chamada_funcao       go to state 54
    expr_logica_e        go to state 107
    expr_igualdade       go to state 58
    expr_relacional      go to state 59
    expr_aditiva         go to state 60
    expr_multiplicativa  go to state 61
    expr_unaria          go to state 62
    fator                go to state 63


State 84

   50 expr_logica_e: expr_logica_e '&' • expr_igualdade

    TK_ID          shift, and go to state 46
    TK_LI_INTEIRO  shift, and go to state 47
    TK_LI_DECIMAL  shift, and go to state 48
    '('            shift, and go to state 49
    '+'            shift, and go to state 50
    '-'            shift, and go to state 51
    '!'            shift, and go to state 52

    literal              go to state 53
    chamada_funcao       go to state 54
    expr_igualdade       go to state 108
    expr_relacional      go to state 59
    expr_aditiva         go to state 60
    expr_multiplicativa  go to state 61
    expr_unaria          go to state 62
    fator                go to state 63


State 85

   52 expr_igualdade: expr_igualdade TK_OC_EQ • expr_relacional

    TK_ID          shift, and go to state 46
    TK_LI_INTEIRO  shift, and go to state 47
    TK_LI_DECIMAL  shift, and go to state 48
    '('            shift, and go to state 49
    '+'            shift, and go to state 50
    '-'            shift, and go to state 51
    '!'            shift, and go to state 52

    literal              go to state 53
    chamada_funcao       go to state 54
    expr_relacional      go to state 109
    expr_aditiva         go to state 60
    expr_multiplicativa  go to state 61
    expr_unaria          go to state 62
    fator                go to state 63


State 86

   53 expr_igualdade: expr_igualdade TK_OC_NE • expr_relacional

    TK_ID          shift, and go to state 46
    TK_LI_INTEIRO  shift, and go to state 47
    TK_LI_DECIMAL  shift, and go to state 48
    '('            shift, and go to state 49
    '+'            shift, and go to state 50
    '-'            shift, and go to state 51
    '!'            shift, and go to state 52

    literal              go to state 53
    chamada_funcao       go to state 54
    expr_relacional      go to state 110
    expr_aditiva         go to state 60
    expr_multiplicativa  go to state 61
    expr_unaria          go to state 62
    fator                go to state 63


State 87

   57 expr_relacional: expr_relacional TK_OC_LE • expr_aditiva

    TK_ID          shift, and go to state 46
    TK_LI_INTEIRO  shift, and go to state 47
    TK_LI_DECIMAL  shift, and go to state 48
    '('            shift, and go to state 49
    '+'            shift, and go to state 50
    '-'            shift, and go to state 51
    '!'            shift, and go to state 52

    literal              go to state 53
    chamada_funcao       go to state 54
    expr_aditiva         go to state 111
    expr_multiplicativa  go to state 61
    expr_unaria          go to state 62
    fator                go to state 63


State 88

   58 expr_relacional: expr_relacional TK_OC_GE • expr_aditiva

    TK_ID          shift, and go to state 46
    TK_LI_INTEIRO  shift, and go to state 47
    TK_LI_DECIMAL  shift, and go to state 48
    '('            shift, and go to state 49
    '+'            shift, and go to state 50
    '-'            shift, and go to state 51
    '!'            shift, and go to state 52

    literal              go to state 53
    chamada_funcao       go to state 54
    expr_aditiva         go to state 112
    expr_multiplicativa  go to state 61
    expr_unaria          go to state 62
    fator                go to state 63


State 89

   55 expr_relacional: expr_relacional '<' • expr_aditiva

    TK_ID          shift, and go to state 46
    TK_LI_INTEIRO  shift, and go to state 47
    TK_LI_DECIMAL  shift, and go to state 48
    '('            shift, and go to state 49
    '+'            shift, and go to state 50
    '-'            shift, and go to state 51
    '!'            shift, and go to state 52

    literal              go to state 53
    chamada_funcao       go to state 54
    expr_aditiva         go to state 113
    expr_multiplicativa  go to state 61
    expr_unaria          go to state 62
    fator                go to state 63


State 90

   56 expr_relacional: expr_relacional '>' • expr_aditiva

    TK_ID          shift, and go to state 46
    TK_LI_INTEIRO  shift, and go to state 47
    TK_LI_DECIMAL  shift, and go to state 48
    '('            shift, and go to state 49
    '+'            shift, and go to state 50
    '-'            shift, and go to state 51
    '!'            shift, and go to state 52

    literal              go to state 53
    chamada_funcao       go to state 54
    expr_aditiva         go to state 114
    expr_multiplicativa  go to state 61
    expr_unaria          go to state 62
    fator                go to state 63


State 91

   60 expr_aditiva: expr_aditiva '+' • expr_multiplicativa

    TK_ID          shift, and go to state 46
    TK_LI_INTEIRO  shift, and go to state 47
    TK_LI_DECIMAL  shift, and go to state 48
    '('            shift, and go to state 49
    '+'            shift, and go to state 50
    '-'            shift, and go to state 51
    '!'            shift, and go to state 52

    literal              go to state 53
    chamada_funcao       go to state 54
    expr_multiplicativa  go to state 115
    expr_unaria          go to state 62
    fator                go to state 63


State 92

   61 expr_aditiva: expr_aditiva '-' • expr_multiplicativa

    TK_ID          shift, and go to state 46
    TK_LI_INTEIRO  shift, and go to state 47
    TK_LI_DECIMAL  shift, and go to state 48
    '('            shift, and go to state 49
    '+'            shift, and go to state 50
    '-'            shift, and go to state 51
    '!'            shift, and go to state 52

    literal              go to state 53
    chamada_funcao       go to state 54
    expr_multiplicativa  go to state 116
    expr_unaria          go to state 62
    fator                go to state 63


State 93

   63 expr_multiplicativa: expr_multiplicativa '*' • expr_unaria

    TK_ID          shift, and go to state 46
    TK_LI_INTEIRO  shift, and go to state 47
    TK_LI_DECIMAL  shift, and go to state 48
    '('            shift, and go to state 49
    '+'            shift, and go to state 50
    '-'            shift, and go to state 51
    '!'            shift, and go to state 52

    literal         go to state 53
    chamada_funcao  go to state 54
    expr_unaria     go to state 117
    fator           go to state 63


State 94

   64 expr_multiplicativa: expr_multiplicativa '/' • expr_unaria

    TK_ID          shift, and go to state 46
    TK_LI_INTEIRO  shift, and go to state 47
    TK_LI_DECIMAL  shift, and go to state 48
    '('            shift, and go to state 49
    '+'            shift, and go to state 50
    '-'            shift, and go to state 51
    '!'            shift, and go to state 52

    literal         go to state 53
    chamada_funcao  go to state 54
    expr_unaria     go to state 118
    fator           go to state 63


State 95

   65 expr_multiplicativa: expr_multiplicativa '%' • expr_unaria

    TK_ID          shift, and go to state 46
    TK_LI_INTEIRO  shift, and go to state 47
    TK_LI_DECIMAL  shift, and go to state 48
    '('            shift, and go to state 49
    '+'            shift, and go to state 50
    '-'            shift, and go to state 51
    '!'            shift, and go to state 52

    literal         go to state 53
    chamada_funcao  go to state 54
    expr_unaria     go to state 119
    fator           go to state 63


State 96

   44 repeticao: TK_ENQUANTO '(' expressao • ')' bloco_de_comandos

    ')'  shift, and go to state 120


State 97

   37 atribuicao: TK_ID TK_ATRIB expressao •

    $default  reduce using rule 37 (atribuicao)


State 98

   38 chamada_funcao: TK_ID '(' argumentos_opcional • ')'

    ')'  shift, and go to state 121


State 99

   39 argumentos_opcional: argumentos •

    $default  reduce using rule 39 (argumentos_opcional)


State 100

   41 argumentos: expressao •
   42           | expressao • ',' argumentos

    ','  shift, and go to state 122
